Removido dialog de times, criada nova página de detalhes do medicamento. Finalizada página de login e cadastro.

--- a/src/app/pages/all-meds/all-meds.component.html
+++ b/src/app/pages/all-meds/all-meds.component.html
@@ -2,16 +2,15 @@
 <div class="container">
   <h1>Seus remédios</h1>
 
-  <button class="btn" type="button" [routerLink]="['/newmed']">
-    Novo remédio
-  </button>
-
   @if (medslist() === null) {
   <p>Você não tem nenhum remédio cadastrado.</p>
   <button class="btn" type="button" [routerLink]="['/newmed']">
     Novo remédio
   </button>
-  } @else { @for (item of medslist(); track item.id) { @defer (on viewport) {
+  } @else {
+  <button class="btn" type="button" [routerLink]="['/newmed']">
+    Novo remédio</button
+  >@for (item of medslist(); track item.id) { @defer (on viewport) {
   <div class="list"><app-med-list [med]="item" /></div>
   } @placeholder {
   <p></p>
@@ -19,9 +18,8 @@
   <p>Loading...</p>
   } @error {
   <p>Não foi possível carregar os dados.</p>
-  } } }
-
+  } }
   <button class="btn" type="button" [routerLink]="['/newmed']">
-    Novo remédio
-  </button>
+    Novo remédio</button
+  >}
 </div>
