--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -55,7 +55,9 @@
       <p>{{ med.notes }}</p>
     </div>
     <div>
-      <button class="btn" (click)="openDialog()">Ver horários</button>
+      <button class="btn" [routerLink]="['/details, med.id']">
+        Ver horários
+      </button>
     </div>
   </article>
 </details>
