--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,12 +1,71 @@
 <div class="presentation">
   <img src="logo-green.svg" alt="" />
-  <p>Tenha total controle sobre seus medicamentos com Helena!</p>
+  <p>Tenha total controle sobre a sua saúde!</p>
 </div>
 <div class="container">
   <div class="register">
     <h2>Cadastre-se</h2>
+    <div>
+      <form action="login" method="post" #form="ngForm" (ngSubmit)="onLogin()">
+        <input
+          required
+          type="name"
+          name="name"
+          id="name"
+          placeholder="Primeiro nome"
+          [(ngModel)]="registerData.name"
+        />
+        <input
+          required
+          type="email"
+          name="email"
+          id="emailRegister"
+          placeholder="E-mail"
+          [(ngModel)]="registerData.email"
+        />
+        <input
+          required
+          type="password"
+          name="password"
+          id="passwordRegister"
+          placeholder="password"
+          [(ngModel)]="registerData.password"
+        />
+        <div class="dateOfBirth">
+          <label for="birthdate">Data de nascimento</label>
+          <input
+            required
+            type="date"
+            name="birthdate"
+            id="birthdate"
+            [(ngModel)]="registerData.dateOfBirth"
+          />
+        </div>
+
+        <button class="btn" type="submit">Cadastrar</button>
+      </form>
+    </div>
   </div>
   <div class="login">
     <h2>Login</h2>
+    <div>
+      <form action="login" method="post" (ngSubmit)="onLogin()">
+        <input
+          type="email"
+          name="email"
+          id="emailLogin"
+          placeholder="E-mail"
+          [(ngModel)]="loginData.email"
+        />
+        <input
+          type="password"
+          name="password"
+          id="passwordLogin"
+          placeholder="password"
+          [(ngModel)]="loginData.password"
+        />
+        <button class="btn" type="submit">Entrar</button>
+      </form>
+    </div>
   </div>
 </div>
