--- a/src/app/pages/med-details/med-details.component.scss
+++ b/src/app/pages/med-details/med-details.component.scss
@@ -1,7 +1,13 @@
 :host {
-  display: block;
-
   .container {
-    margin-top: 3rem;
+    margin: 6rem 3rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--white);
+    width: 80vw;
+    border-radius: 1rem;
   }
 }
