Ajuste no responsivo da tela de login

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -28,7 +28,7 @@
           type="password"
           name="password"
           id="passwordRegister"
-          placeholder="password"
+          placeholder="Senha"
           [(ngModel)]="registerData.password"
         />
         <div class="dateOfBirth">
