--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -9,9 +9,7 @@ body {
   flex-direction: column;
   font-family: "Nunito", sans-serif;
   background-image: url("../../../public/background.jpg");
-  background-size: cover; /* Ajusta a imagem para cobrir todo o contêiner */
-  background-position: center; /* Centraliza a imagem */
-  background-repeat: no-repeat; /* Evita que a imagem se repita */
+  background-size: cover;
 }
 
 html {
