Página de detalhes do medicamento finalizada

--- a/src/app/components/med-list/med-list.component.html
+++ b/src/app/components/med-list/med-list.component.html
@@ -55,7 +55,7 @@
       <p>{{ med.notes }}</p>
     </div>
     <div>
-      <button class="btn" [routerLink]="['/details']">Ver horários</button>
+      <button class="btn" (click)="goToDetails()">Ver horários</button>
     </div>
   </article>
 </details>
