--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
   </button>
   <nav aria-label="Navegação principal" [ngClass]="{ show: isMenuVisible }">
     <ul>
-      <li><a href="#home">Home</a></li>
+      <li><a href="/dashboard">Home</a></li>
       <li><a href="/meds">Remédios</a></li>
       <li><a href="/doctors">Médicos</a></li>
       <div class="profile">
