--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,9 @@
       <li><a href="/meds">Remédios</a></li>
       <li><a href="/doctors">Médicos</a></li>
       <div class="profile">
-        <li><a href="">Nome</a></li>
+        <li>
+          <a href="">{{ userName }}</a>
+        </li>
         <img src="user.svg" alt="" />
       </div>
     </ul>
