--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,6 +8,7 @@
     background-color: var(--primary-green);
     z-index: 1;
     color: var(--white);
+    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
 
     button {
       display: none;
