--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -14,6 +14,7 @@
     margin: 3rem 6rem;
     border-radius: 2rem;
     align-items: start;
+    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
 
     input {
       padding: 0.5rem 1rem;
@@ -39,6 +40,7 @@
       min-height: 80%;
       border-radius: 2rem;
       flex: 1;
+      box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
 
       h2 {
         flex: 1;
