--- a/src/app/components/new-time-dialog/new-time-dialog.component.html
+++ b/src/app/components/new-time-dialog/new-time-dialog.component.html
@@ -188,9 +188,7 @@
     </div>
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button class="btn btn-small" (click)="saveMonthlyYearlyTimes()">
-      Salvar
-    </button>
+    <button class="btn" (click)="saveMonthlyYearlyTimes()">Salvar</button>
   </mat-dialog-actions>
 </div>
 }
