--- a/src/app/components/new-time-dialog/new-time-dialog.component.scss
+++ b/src/app/components/new-time-dialog/new-time-dialog.component.scss
@@ -32,7 +32,7 @@
   .weekly {
     display: flex;
     flex-direction: column;
-    background-color: var(--off-white);
+    background-color: var(--lighter-grey);
     justify-content: start;
     align-items: start;
 
