--- a/src/app/pages/doctors/doctors.component.html
+++ b/src/app/pages/doctors/doctors.component.html
@@ -21,7 +21,9 @@
     <ng-container matColumnDef="Contato">
       <th mat-header-cell *matHeaderCellDef="">Contato</th>
       @for (item of docsList; track item.id) {
-      <td mat-cell *matCellDef="let item">{{ item.contact }}</td>
+      <td mat-cell *matCellDef="let item">
+        {{ item.contact || "Não disponível" }}
+      </td>
       }
     </ng-container>
 
