--- a/src/app/pages/doctors/doctors.component.scss
+++ b/src/app/pages/doctors/doctors.component.scss
@@ -14,6 +14,7 @@
       width: 50%;
       text-align: left;
       background-color: var(--off-white);
+      border-radius: 1rem;
 
       th {
         color: black;
