--- a/src/app/components/day-medication-chip/day-medication-chip.component.scss
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.scss
@@ -11,6 +11,7 @@
     margin-left: auto;
     margin-right: auto;
     align-items: center;
+    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.5);
 
     .med-data {
       text-align: right;
