--- a/src/app/components/med-list/med-list.component.scss
+++ b/src/app/components/med-list/med-list.component.scss
@@ -31,6 +31,11 @@
 
     article {
       align-items: first baseline;
+
+      .actions {
+        display: flex;
+        gap: 2rem;
+      }
     }
 
     &[open] {
@@ -104,7 +109,8 @@
     article {
       display: flex;
       flex-wrap: wrap;
-      flex-direction: row-reverse;
+      flex-direction: row;
+
       .responsive-info {
         display: inline !important;
       }
