--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -20,3 +20,10 @@
     background-color: var(--lighter-grey);
   }
 }
+
+.delete-btn {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
