--- a/src/app/components/day-medication-chip/day-medication-chip.component.html
+++ b/src/app/components/day-medication-chip/day-medication-chip.component.html
@@ -1,8 +1,7 @@
 <section class="med-chip" aria-label="Medicamento">
   <div class="med-data" aria-label="Dados do medicamento">
     <h3>{{ med.name }}</h3>
-    <p class="dose-full">Dosagem: {{ med.dosage }}</p>
-    <p class="dose-min">{{ med.dosage }}</p>
+    <p class="dose-full">Dosagem: {{ med.dosage }} {{ med.type }}</p>
   </div>
 
   <div class="med-time" aria-label="Horário">
