--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -16,7 +16,9 @@
         <li>
           <a href="">{{ userName }}</a>
         </li>
-        <img src="user.svg" alt="" />
+        <a href="/user">
+          <img src="user.svg" alt="" />
+        </a>
       </div>
     </ul>
   </nav>
