--- a/src/scss/theme/_theme.scss
+++ b/src/scss/theme/_theme.scss
@@ -3,7 +3,7 @@
   --black: #0d0a00;
   // --dark-grey: #333;
   // --medium-grey: #666;
-  // --light-grey: #999;
+  --light-grey: #999;
   --lighter-grey: #d9d9d9;
   --primary-green: #257a6b;
   --secondary-green: #208c81;
