--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,13 +12,19 @@
       <li><a href="/dashboard">Home</a></li>
       <li><a href="/meds">Remédios</a></li>
       <li><a href="/doctors">Médicos</a></li>
+      <li><a href="/user">Perfil</a></li>
+      <li class="logout-link"><a href="/">Sair</a></li>
       <div class="profile">
-        <li>
-          <a href="">{{ userName }}</a>
-        </li>
+        <li><a href="/user">Perfil</a></li>
+        <li><a href="/">Sair</a></li>
         <a href="/user">
-          <img src="user.svg" alt="" />
+          <img src="user.svg" alt="Perfil" />
         </a>
+        <div class="logout">
+          <a href="/">
+            <img src="logout.svg" alt="Logout" />
+          </a>
+        </div>
       </div>
     </ul>
   </nav>
