--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -23,6 +23,10 @@
       display: flex;
       width: 100%;
 
+      .logout-link {
+        color: var(--light-grey);
+      }
+
       ul {
         display: flex;
         position: relative;
@@ -36,10 +40,17 @@
           display: flex;
           flex-direction: row;
           position: absolute;
-          margin: 0;
           right: 2rem;
           align-items: center;
           justify-content: center;
+
+          li {
+            display: none;
+          }
+
+          .logout {
+            margin-left: 1rem;
+          }
         }
       }
     }
@@ -84,6 +95,10 @@
             position: static;
             margin: 0;
             right: auto;
+
+            li {
+              display: block;
+            }
 
             img {
               display: none;
