--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,18 +1,21 @@
 :host {
   .container {
+    display: flex;
     margin-top: 100px;
-    input {
-      padding: 0.5rem 1rem;
-      font-size: 1rem;
-      margin-right: 1rem;
-      margin-bottom: 0.5rem;
-      border: none;
-      background-color: var(--lighter-grey);
-      border-radius: 0.5rem;
-    }
+
     label {
       display: block;
       font-weight: bold;
+      font-size: 1rem;
+    }
+
+    input {
+      padding: 0.5rem 1rem;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      border: none;
+      background-color: var(--lighter-grey);
+      border-radius: 0.5rem;
     }
   }
 }
