--- a/src/app/pages/all-meds/all-meds.component.scss
+++ b/src/app/pages/all-meds/all-meds.component.scss
@@ -9,6 +9,10 @@
       margin: 1rem;
     }
 
+    .delete-btn {
+      color: var(--pink);
+    }
+
     .list {
       margin-bottom: 1rem;
     }
