--- a/src/app/pages/new-med/new-med.component.scss
+++ b/src/app/pages/new-med/new-med.component.scss
@@ -63,6 +63,7 @@
       button {
         margin-left: auto;
         margin-right: auto;
+        margin-bottom: 80px;
         justify-self: center;
         margin-top: 1rem;
       }
