--- a/src/app/pages/doctors/doctors.component.html
+++ b/src/app/pages/doctors/doctors.component.html
@@ -28,6 +28,17 @@
       }
     </ng-container>
 
+    <ng-container matColumnDef="Deletar">
+      <th mat-header-cell *matHeaderCellDef="">Deletar</th>
+      @for (item of docsList; track item.id) {
+      <td mat-cell *matCellDef="let item">
+        <button class="delete-btn" (click)="deleteDoctor(item.id)">
+          <img src="delete.svg" alt="Deletar cadastro de médico" />
+        </button>
+      </td>
+      }
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
