--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -12,6 +12,7 @@
 
     .btn-div {
       margin-top: 2rem;
+      margin-bottom: 2rem;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
