--- a/src/app/pages/doctors/doctors.component.html
+++ b/src/app/pages/doctors/doctors.component.html
@@ -28,8 +28,8 @@
       }
     </ng-container>
 
-    <ng-container matColumnDef="Deletar">
-      <th mat-header-cell *matHeaderCellDef="">Deletar</th>
+    <ng-container matColumnDef="Excluir">
+      <th mat-header-cell *matHeaderCellDef="">Excluir</th>
       @for (item of docsList; track item.id) {
       <td mat-cell *matCellDef="let item">
         <button class="delete-btn" (click)="deleteDoctor(item.id)">
